# Jiterati

./: .gitignore  AGENTS.md  CMakeLists.txt
.agents/: AGENTS.md
.agents/datasets/: aarch64.lua  amd64.lua  rv64.lua  wasm.lua
BE/: AMD64.hpp  Metadata.cpp  Metadata.hpp
BE/AArch64/: AArch64.cpp  AArch64.hpp  Emit.cpp  Emit.hpp  IRCompiler.cpp  ISel.cpp  ISel.hpp  Peephole.cpp  Peephole.hpp  RegAlloc.cpp  RegAlloc.hpp  Rewrite.cpp  Rewrite.hpp
BE/AMD64/: AMD64.cpp  AMD64.hpp  Backend.cpp  Backend.hpp  Emit.cpp  Emit.hpp  IRCompiler.cpp  ISel.cpp  ISel.hpp  Peephole.cpp  Peephole.hpp  RegAlloc.cpp  RegAlloc.hpp  Rewrite.cpp  Rewrite.hpp
BE/RV64/: Emit.cpp  Emit.hpp  IRCompiler.cpp  ISel.cpp  ISel.hpp  Peephole.cpp  Peephole.hpp  RV64.cpp  RV64.hpp  RegAlloc.cpp  RegAlloc.hpp  Rewrite.cpp  Rewrite.hpp
BE/WASM/: Emit.cpp  Emit.hpp  IRCompiler.cpp  ISel.cpp  ISel.hpp  Peephole.cpp  Peephole.hpp  RegAlloc.cpp  RegAlloc.hpp  Rewrite.cpp  Rewrite.hpp  WASM.cpp  WASM.hpp
IR/: AST.cpp  Analyze.cpp  ICompiler.hpp  IR.hpp  Parse.cpp  Peephole.cpp  Rewrite.cpp  TAC.cpp  Terse.cpp
Lua/: JiteratiBinding.cpp
Macros/: CountDownLoop.lua  QuickAdd.lua  QuickDivide.lua  QuickMultiply.lua  QuickSubtract.lua
Passlib/: CFGAnalysis.cpp  ConstantFolding.cpp  ConstantPropagation.cpp  DeadCodeRemoval.cpp  DominatorAnalysis.cpp  LivenessAnalysis.cpp  PeepholeOptimization.cpp  StrengthReduction.cpp
Plugins/: BURSISel.cpp  ListISched.cpp  MaxMunchISel.cpp
cmake/: jiterati.pc.in
dependencies/sol2/documentation/@SOL2_DOXYGEN_OUTPUT_DIR@/latex/: refman.tex
dependencies/sol2/documentation/latex/: refman.ilg
docs/: CMakeLists.txt  Doxyfile.in  frontpage.md
docs/manual/: 01-introduction.md  02-architecture.md  03-core-concepts.md  04-the-ir.md  05-parsing.md  06-serialization.md  07-validation.md  08-analysis-passes.md  09-transformation-passes.md  10-backend-interface.md  11-writing-a-backend.md  12-plugin-system.md  13-writing-plugins.md  14-writing-passes.md  15-package-system.md  16-cli.md  17-embedding-jiterati.md  18-internal-design.md  19-ljiterati-library.md  20-macros.md
docs/vademecum/: .chktexrc  .latexmkrc  Makefile  build.sh
examples/: abs.cpp  square.cpp
examples/API/: 01_add_i32.cpp  02_mul_i64.cpp  03_abs_select.cpp  04_min_select.cpp  05_bitwise_mask.cpp  06_shift_mix.cpp  07_signed_divrem.cpp  08_unsigned_divrem.cpp  09_compare_chain.cpp  10_conditional_branch.cpp  11_phi_loop.cpp  12_direct_call.cpp  13_alloca_load_store.cpp  14_pointer_roundtrip.cpp  15_const_bool_select.cpp  16_void_return.cpp  17_multi_function_module.cpp  18_jbl_roundtrip.cpp  19_pass_pipeline.cpp  20_module_introspection.cpp  21_type_and_constant_pool.cpp  22_cfg_diamond_join.cpp  23_instruction_rewrite.cpp  24_backend_helper.cpp  25_plugin_pass_registry.cpp
examples/IR/: 01_add_i64.ir  02_sub_i32.ir  03_mul_i64.ir  04_signed_div.ir  05_unsigned_rem.ir  06_negate.ir  07_bitwise_and.ir  08_bitwise_or_xor.ir  09_shift_left.ir  10_arithmetic_shift.ir  11_compare_select.ir  12_let_binding.ir  13_nested_if.ir  14_call_chain.ir  15_bool_logic.ir  16_unsigned_bounds.ir  17_float_arithmetic.ir  18_boolean_literals.ir  19_forward_call.ir  20_null_pointer.ir
include/: DSLtk.hpp  Jiterati-BE.hpp  Jiterati-Macro.hpp  Jiterati-Pass.hpp  Jiterati-Plugin.hpp  Jiterati.hpp
specs/: IR.ebnf  IR.md  backend-specs.yaml  jiterati-api.yaml  passes-specs.yaml  plugin-specs.yaml
src/: JIT.cpp  Jiterati-CLI.cpp  Jiterati-JBL.cpp  Jiterati-JPL.cpp
tests/: test_backend_metadata.cpp  test_core.cpp  test_jbl.cpp  test_lua.cpp  test_passes.cpp  test_plugins.cpp
tests/fixtures/: valid.terse
tests/fixtures/malformed/: missing-name.jpkg
tests/fixtures/package/: package.sh
tests/fixtures/package-extra/Plugin/: undeclared.txt
tests/fixtures/package/BE/: fixture.txt
tests/fixtures/package/Docs/: readme.md
tests/fixtures/package/Examples/: example.ir
tests/fixtures/package/Pass/: fixture.txt
tests/fixtures/package/Plugin/: fixture.txt
tools/: generate_backend_metadata.py
